Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Sales_Order_Custom__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000002tdsuEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Discount_for_Order__c</fullName>
        <formula>IF( Order_Line_Items__c &gt; 0, Total_Discount__c  /  Order_Line_Items__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Discount for Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Number__c</fullName>
        <formula>Account__r.Name  &amp; &quot;-&quot; &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <defaultValue>Today() + 14</defaultValue>
        <label>Expected Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Line_Items__c</fullName>
        <label>Order Line Items</label>
        <summaryForeignKey>Order_Line_Item__c.Order_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Order_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Order Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>R00No0000000pcFuEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N30000002tdsvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <defaultValue>Today() + 3</defaultValue>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <summarizedField>Order_Line_Item__c.Line_Item_Discount__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <label>Total Order Amount</label>
        <summarizedField>Order_Line_Item__c.Extended_Net_Price__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sale_Amount__c</fullName>
        <formula>Sales_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All_Sales_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Total_Sale_Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Sales Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{MM}{DD}{YY}-{000}</displayFormat>
        <label>Sales Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>